# udemy-flutter

./: build-ubuntu-23.sh
HyprSource/: libdisplay-info-0.1.1.tar.xz  wayland-protocols-1.31.tar.xz
HyprSource/hyprland-source/: config.mk
HyprSource/libdisplay-info-0.1.1/: .gitlab-ci.yml  README.md  cta-vic-table.c  cta.c  cvt.c  displayid.c  dmt-table.c  edid.c  gcovr.cfg  info.c  memory-stream.c  meson.build  release.sh  releasing.md
HyprSource/libdisplay-info-0.1.1/di-edid-decode/: cta.c  displayid.c  edid.c  meson.build
HyprSource/libdisplay-info-0.1.1/include/: cta.h  displayid.h  edid.h  memory-stream.h
HyprSource/libdisplay-info-0.1.1/test/: edid-decode-diff.sh  meson.build
HyprSource/libdisplay-info-0.1.1/test/data/: README.md  apple-xdr-dp.diff  cta-timings.diff  cta-timings.edid  custom-uncommon-cta-vesa.diff  cvt.edid  cvt.print  goldstar-ite6604-hdmi.diff  hitachi-55r6+.diff  hitachi-55r6+.edid  hitachi-55r6+.print  hp-5dq99aa-hdmi.diff  msi-mag321curv-dp.diff  philips-ftv-490.diff  philips-ftv-490.edid  philips-ftv-490.print  samsung-q800t-hdmi2.0.diff  samsung-q800t-hdmi2.0.print  samsung-s27a950d-dp.diff  viewsonic-vp2768-dp.diff
HyprSource/libdisplay-info-0.1.1/tool/: gen-cta-vic.py  gen-dmt.py
adv_basics/: pubspec.yaml
adv_basics/lib/: answer_button.dart  main.dart  question_screen.dart  question_summary.dart  questions_screen.dart  quiz.dart  results_screen.dart  start_screen.dart
adv_basics/lib/models/: quiz_question.dart
expense_tracker/lib/: expenses.dart  expenses_list.dart  main.dart
first_app/: pubspec.yaml
first_app/lib/: dice_roller.dart  gradient_container.dart  main.dart  styled_text.dart
(+11 files in other folders)
